fix: Minimized scrollbar in Menu (#1761)

--- a/apps/shared-web/global.css
+++ b/apps/shared-web/global.css
@@ -95,4 +95,8 @@
   body {
     @apply bg-background text-foreground;
   }
+  .scrollbar-thin {
+    scrollbar-width: thin;
+  }
+
 }
